MNK-5471 : support maven repos in non default locations, windows friendly new File(path).toURI().toUrl()
git-svn-id: https://svn.terracotta.org/repo/tc/dso/trunk@23520 7fc7bbf3-cf45-46d4-be06-341739edd864